# Cube-Fight-Game

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
certificates/: cert.pem  digest.txt  generate.sh  key.pem
src/: lib.rs  main.rs
src/client/: main.rs
src/core/: mod.rs  particles.rs  player.rs  protocol.rs  shared.rs
src/server/: main.rs
webbuild/: index.html
webbuild/pkg/: client.d.ts  client.js  client_bg.wasm.d.ts  monkey.d.ts  monkey.js  monkey_bg.wasm.d.ts
