[package]
name = "monkey"
version = "0.1.0"
edition = "2024"
default-run = "monkey"

[dependencies]
bevy = "0.16.1"
bevy_hanabi = "0.16.0"
bevy_rapier3d = { version = "0.30.0", features = ["debug-render", "rapier-debug-render", "enhanced-determinism", "parallel", "serde-serialize"] }
# "SIMD cannot be enabled when the `enhanced-determinism` feature is also enabled."
leafwing-input-manager = { version = "0.17.1" }
lightyear = { version = "0.22.5", features = ["leafwing"] }
serde = "1.0.219"
rand_core = "0.9"
bevy_rand = { version = "0.11", features = ["rand_chacha", "wyrand"] }

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"



[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.11", features = ["wasm_js"] }

# It's recommended to set the flag on a per-target basis:
[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']