[package]
name = "monkey"
version = "0.1.0"
edition = "2024"
default-run = "monkey"

[dependencies]
async-compat = "0.2.4"
bevy = "0.16.1"
# bevy_hanabi = "0.16.0"
# "SIMD cannot be enabled when the `enhanced-determinism` feature is also enabled."
# Parallel physics is not Send frendly and thus does not play well with multiplayer. 
# Perhpase there is a way to work around, or Im doing it wrong, but might be worth coming back to
bevy_rapier3d = { version = "0.30.0", features = ["debug-render", "rapier-debug-render", "enhanced-determinism", "serde-serialize"] }
leafwing-input-manager = { version = "0.17.1" }
lightyear = { version = "0.22.5", features = ["leafwing", "netcode", "webtransport"] }
serde = "1.0.219"
# getrandom = { version = "0.3", features = ["wasm_js"] }
# getrandom = { version = "0.2", features = ["js"] }
# rand_core = "0.9"
# bevy_rand = { version = "0.11", features = ["rand_chacha", "wyrand"] }

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
# bevy_rand = { version = "0.11", features = ["wasm_js"] }
# getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.3", features = ["wasm_js"] } # For v0.3 and above
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
